[package]
name = "from_proc"
version = "0.1.1"
edition = "2021"
description = "A procedural macro for `from` crate"
authors = ["Marwan Hilal <marwan.hilal.dev@gmail.com>"]
rust-version = "1.61"
repository = "https://github.com/infinite-dev-void/from"
license-file = "LICENSE"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0.37"
